<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:key="">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>

    <PreferenceCategory android:title="@string/preference_category_general">

        <SwitchPreferenceCompat
            android:title="@string/preference_force_english_title"
            android:key="force_english"
            android:summary="@string/preference_force_english_description"
            android:icon="@drawable/ic_px_translate"/>

        <androidx.preference.ListPreference
            android:defaultValue="0"
            android:entries="@array/start_tab_names"
            android:entryValues="@array/start_tab_values"
            android:icon="@drawable/ic_nav_home"
            android:key="startTab"
            android:title="@string/preference_start_tab_title"
            app:useSimpleSummaryProvider="true"/>

        <Preference
            android:title="@string/preference_ask_for_notification_title"
            android:summary="@string/preference_ask_for_notification_description"
            android:key="notification_permission_request"
            android:icon="@drawable/ic_px_bell"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_game">

        <Preference
            android:key="video_screen_setting"
            android:title="@string/preference_video_title"
            android:summary="@string/preference_video_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceVideoFragment"
            android:icon="@drawable/ic_px_image"/>

        <Preference
            android:key="control_screen_setting"
            android:title="@string/preference_control_title"
            android:summary="@string/preference_control_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceControlFragment"
            android:icon="@drawable/ic_px_gamepad"/>

        <Preference
            android:key="java_screen_setting"
            android:title="@string/preference_java_title"
            android:summary="@string/preference_java_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceJavaFragment"
            android:icon="@drawable/ic_px_java"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_launcher">

        <Preference
            android:key="misc_screen_setting"
            android:title="@string/preference_misc_title"
            android:summary="@string/preference_misc_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceMiscellaneousFragment"
            android:icon="@drawable/ic_px_file_dl"/>

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_update"
            android:key="checkUpdates"
            android:summary="@string/preference_check_updates_description"
            android:title="@string/preference_check_updates_title"/>

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_px_memory_warning"
            android:key="showMemoryWarning"
            android:title="@string/preference_show_memory_warning_title"
            android:summary="@string/preference_show_memory_warning_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_advanced">

        <Preference
            android:key="experimental_screen_setting"
            android:title="@string/preference_experimental_title"
            android:summary="@string/preference_experimental_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceExperimentalFragment"
            android:icon="@drawable/ic_px_experiment"/>

        <Preference
            android:key="about_screen_setting"
            android:title="@string/preference_about_title"
            android:summary="@string/preference_about_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceAboutFragment"
            android:icon="@drawable/ic_info"/>
    </PreferenceCategory>
</PreferenceScreen>
